--- a/GameData/nli2work/RadialOmniSeparator/Localization/it-it.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Localization/it-it.cfg
@@ -3,6 +3,7 @@
 // created: 05 Oct 21
 // updated: 30 Sept 2022
 
+// translated by: [@MattNot](https://github.com/MattNot)
 // CC BY-NC-SA 4.0 by zer0Kerbal
 
 Localization
