--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,6 +1,6 @@
-# 1.2.0.0
+# 1.2.0.1
 # created: 02 Dec 2021
-# updated: 30 Sep 2022
+# updated: 05 Oct 2022
 # An action for filtering pull requests and issues from first-time contributors.
 # https://github.com/marketplace/actions/first-interaction
 
@@ -19,7 +19,7 @@ jobs:
     if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
     # - uses: actions/first-interaction@latest
-    - uses: actions/first-interaction@v1.1.0
+    - uses: actions/first-interaction@main
       continue-on-error: true
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
