--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     # - uses: actions/first-interaction@latest
     - uses: actions/first-interaction@main
-      continue-on-error: true
+      # continue-on-error: true
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         issue-message: |
