--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -19,7 +19,7 @@ jobs:
     if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
     # - uses: actions/first-interaction@latest
-    - uses: actions/first-interaction@v1.1.1
+    - uses: actions/first-interaction@main
       # continue-on-error: true
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
