--- a/GameData/nli2work/RadialOmniSeparator/Localization/no-no.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Localization/no-no.cfg
@@ -1,5 +1,5 @@
 // no-no.cfg v 1.0.0.0
-// Radiell Omni Separator (ROS)
+// Radial Omni Separator (ROS)
 // created: 11 Oct 2022
 // updated: 11 Oct 2022
 
@@ -11,30 +11,30 @@ Localization
 	no-no
 	{
 	// ************** General
-		#ROS-tags = ros Radiell omni separator break separat split stag
+		#ROS-tags = ros radial omni separator break separat split stag
 		
 		// ************** 0.3125m
-			#ROS-titl-03125 = 0,3125m Radiell Omni Separator (størrelse 00)
-			#ROS-desc-03125 = Miniatyrisert 0,3125m versjon av Radiell Omni Separator, hendig for brudd med ingen deler tilkoblet. La ingen deler være tilkoblet. Nå med drivstoff-gjennomføring!
+			#ROS-titl-03125 = 0,3125m Radial Omni Separator (størrelse 00)
+			#ROS-desc-03125 = Miniatyrisert 0,3125m versjon av Radial Omni Separator, praktisk for frakobling uten tilkoblede deler. Etterlat ingen deler tilkoblet. Nå med drivstoff-gjennomføring!
 			
 		// **************  0.625m
-			#ROS-titl-0625 = 0,625m Radiell Omni Separator (størrelse 0)
-			#ROS-desc-0625 = Miniatyrisert 0,625m versjon av Radiell Omni Separator, hendig for brudd med ingen deler tilkoblet. La ingen deler være tilkoblet. Nå med drivstoff-gjennomføring!
+			#ROS-titl-0625 = 0,625m Radial Omni Separator (størrelse 0)
+			#ROS-desc-0625 = Miniatyrisert 0,625m versjon av Radial Omni Separator,  praktisk for frakobling uten tilkoblede deler. Etterlat ingen deler tilkoblet. Nå med drivstoff-gjennomføring!
 			
 		// **************  1.25m
-			#ROS-titl-125 = 1,25m Radiell Omni Separator (størrelse 1)
-			#ROS-desc-125 = Vanlig 1,25m versjon av Radiell Omni Separator, hendig for brudd med ingen deler tilkoblet. La ingen deler være tilkoblet. Nå med drivstoff-gjennomføring!
+			#ROS-titl-125 = 1,25m Radial Omni Separator (størrelse 1)
+			#ROS-desc-125 = Vanlig 1,25m versjon av Radial Omni Separator,  praktisk for frakobling uten tilkoblede deler. Etterlat ingen deler tilkoblet. Nå med drivstoff-gjennomføring!
 			
 		// **************  1.875m
-			#ROS-titl-1875 = 1,875m Radiell Omni Separator (størrelse 1p5)
-			#ROS-desc-1875 = Hendig 1,875m versjon av Radiell Omni Separator, hendig for brudd med ingen deler tilkoblet. La ingen deler være tilkoblet. Nå med drivstoff-gjennomføring!
+			#ROS-titl-1875 = 1,875m Radial Omni Separator (størrelse 1p5)
+			#ROS-desc-1875 = Hendig 1,875m versjon av Radial Omni Separator,  praktisk for frakobling uten tilkoblede deler. Etterlat ingen deler tilkoblet. Nå med drivstoff-gjennomføring!
 			
 		// **************  2.50m
-			#ROS-titl-250 = 2,5m Radiell Omni Separator (størrelse 2)
-			#ROS-desc-250 = Hendig 2,5m versjon av Radiell Omni Separator, for de store vanskelige bitene som ikke vil gi slipp. La ingen deler være tilkoblet. Nå med drivstoff-gjennomføring!
+			#ROS-titl-250 = 2,5m Radial Omni Separator (størrelse 2)
+			#ROS-desc-250 = Hendig 2,5m versjon av Radial Omni Separator, for de store vanskelige bitene som ikke vil gi slipp. Etterlat ingen deler tilkoblet. Nå med drivstoff-gjennomføring!
 			
 		// **************  3.75m
-			#ROS-titl-375 = 3,75m Radiell Omni Separator (størrelse 3)
-			#ROS-desc-375 = Stor 3,75m versjon av Radiell Omni Separator, hendig for brudd med ingen deler tilkoblet. La ingen deler være tilkoblet. Nå med drivstoff-gjennomføring!
+			#ROS-titl-375 = 3,75m Radial Omni Separator (størrelse 3)
+			#ROS-desc-375 = Stor 3,75m versjon av Radial Omni Separator,  praktisk for frakobling uten tilkoblede deler. Etterlat ingen deler tilkoblet. Nå med drivstoff-gjennomføring!
 	}
 }
