--- a/GameData/nli2work/RadialOmniSeparator/Localization/it-it.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Localization/it-it.cfg
@@ -1,7 +1,7 @@
 // en-us.cfg v 1.0.0.0
 // Radial Omni Separator (ROS)
-// created: 05 Oct 21
-// updated: 30 Sept 2022
+// created: 30 Sept 2022
+// updated: 
 
 // translated by: [@MattNot](https://github.com/MattNot)
 // CC BY-NC-SA 4.0 by zer0Kerbal
