--- a/GameData/nli2work/RadialOmniSeparator/Localization/es-es.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Localization/es-es.cfg
@@ -1,8 +1,9 @@
-// en-us.cfg v 1.0.0.0
-// Separador Omni Radial (ROS)
-// created: 05 Oct 2021
-// updated: 30 Sep 2022
+// es-es.cfg v 1.0.0.0
+// Radial Omni Separator (ROS)
+// created: 18 Oct 2021
+// updated: 18 Sep 2022
 
+// translated by: [taicoding](https://github.com/taicoding)
 // CC BY-NC-SA 4.0 by zer0Kerbal
 
 Localization
