--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,6 +1,6 @@
-# 1.2.0.1
+# 1.2.0.2
 # created: 02 Dec 2021
-# updated: 05 Oct 2022
+# updated: 25 Oct 2022
 # An action for filtering pull requests and issues from first-time contributors.
 # https://github.com/marketplace/actions/first-interaction
 
@@ -39,7 +39,7 @@ jobs:
               * <KSP_ROOT>/PluginData\ModuleManager\ConfigCache.cfg
           * Screenshots of issue (if appropriate) (images tell a much stronger tale)
           
-          You can archive these files (rar or zip, sadly no 7zip) and drag-n-drop them into the issue
+          You can archive these files (rar or zip, sadly no 7zip) and drag-n-drop them into an issue comment
           
           :vibration_mode::eyes:Please either watch this repositiory for updates.
           
@@ -58,12 +58,12 @@ jobs:
           If you are fixing a bug, please reference the issue number in the description.
           If you are implementing a feature request, please check with the maintainers that the feature will be accepted first.
           
-          :vibration_mode::eyes:Please watch and :star: this repositiory for updates.
+          :vibration_mode: :eyes: Please watch and :star: this repositiory for updates.
           
-          All contributions under this repositiory's license, unless specific allowances have been made in advance with @zer0Kerbal.
+          All contributions are under this repositiory's license, unless specific allowances have been made in advance with @zer0Kerbal.
           
-          :speech_balloon:Kindly read our simple guides to:
-          :point_right: [contributing](https://github.com/zer0Kerbal/.github/blob/master/.github/CONTRIBUTING.md)
-          :point_right: our expected [code of conduct](https://github.com/zer0Kerbal/.github/blob/master/.github/CODE_OF_CONDUCT.md) (hint: we are all adults here)
-          :point_right: our [style guide.md](https://github.com/zer0Kerbal/.github/blob/master/.github/STYLEGUIDE.md)
+          * :speech_balloon: Kindly read our simple guides to:
+            * [contributing](https://github.com/zer0Kerbal/.github/blob/master/.github/CONTRIBUTING.md)
+            * our expected [code of conduct](https://github.com/zer0Kerbal/.github/blob/master/.github/CODE_OF_CONDUCT.md) (hint: we are all adults here)
+            * our [style guide.md](https://github.com/zer0Kerbal/.github/blob/master/.github/STYLEGUIDE.md)
           These are boilerplate.'
