--- a/GameData/nli2work/RadialOmniSeparator/Localization/es-es.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Localization/es-es.cfg
@@ -3,8 +3,9 @@
 // created: 18 Oct 2021
 // updated: 18 Sep 2022
 
-// translated by: [taicoding](https://github.com/taicoding)
-// CC BY-NC-SA 4.0 by zer0Kerbal
+// THIS FILE:
+//  CC BY-NC-SA 4.0
+//  translated courtesy of: [taicoding](https://github.com/taicoding)
 
 Localization
 {
