--- a/GameData/nli2work/RadialOmniSeparator/Localization/it-it.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Localization/it-it.cfg
@@ -3,8 +3,9 @@
 // created: 30 Sept 2022
 // updated: 
 
-// translated by: [@MattNot](https://github.com/MattNot)
-// CC BY-NC-SA 4.0 by zer0Kerbal
+// THIS FILE:
+//  CC BY-NC-SA 4.0
+//  translated courtesy of: [@MattNot](https://github.com/MattNot)
 
 Localization
 {
