--- a/GameData/nli2work/RadialOmniSeparator/Localization/no-no.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Localization/no-no.cfg
@@ -3,8 +3,9 @@
 // created: 11 Oct 2022
 // updated: 11 Oct 2022
 
-// translated by: [@tplive](https://github.com/tplive)
-// CC BY-NC-SA 4.0 by zer0Kerbal
+// THIS FILE:
+//  CC BY-NC-SA 4.0
+//  translated courtesy of: [@tplive](https://github.com/tplive)
 
 Localization
 {
