--- a/GameData/nli2work/RadialOmniSeparator/Parts/ros-0125.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Parts/ros-0125.cfg
@@ -1,7 +1,7 @@
-// ros-0125.cfg v1.0.0.0
+// ros-0125.cfg v1.0.1.0
 // Radial Omni Separator (ROS)
 // created: 
-// updated: 30 Sep 2022
+// updated: 12 Dec 2022
 
 // this file: CC BY-NC-SA 4.0 by zer0Kerbal
 
@@ -22,8 +22,8 @@ PART
 	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1
 	attachRules = 0,1,1,1,0
 
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_vent_large = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 
 	TechRequired = basicRocketry
 	entryCost = 500
@@ -51,9 +51,9 @@ PART
 
 	maxTemp = 2000
 
-	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
+	stagingIcon = DECOUPLER_VERT
 	
 	MODULE
 	{
@@ -68,9 +68,18 @@ PART
 	{
 		name = ModuleDecouple
 		ejectionForce = 50
-		isOmniDecoupler = true
+		ejectionForcePercent = 100
+		isOmniDecoupler = True
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
 	}
-	
+
 	MODULE
 	{
 		name = ModuleCargoPart
