--- a/GameData/nli2work/RadialOmniSeparator/Parts/ros-0375.cfg
+++ b/GameData/nli2work/RadialOmniSeparator/Parts/ros-0375.cfg
@@ -1,59 +1,60 @@
-// ros-0375.cfg v1.0.0.0
+// ros-0375.cfg v1.0.1.0
 // Radial Omni Separator (ROS)
 // created: 
-// updated: 30 Sep 2022
+// updated: 12 Dec 2022
 
 // this file: CC BY-NC-SA 4.0 by zer0Kerbal
 
 PART
 {
 	name = radialomniseparator-0375
-    module = Part
-    author = nohark and zer0Kerbal
+	module = Part
+	author = nohark and zer0Kerbal
 
 	MODEL
-    {
-        model = nli2work/RadialOmniSeparator/Assets/radialSeparator
-    }
-    rescaleFactor = 3.0
-    bulkheadProfiles = srf, size3
+	{
+		model = nli2work/RadialOmniSeparator/Assets/radialSeparator
+	}
+	rescaleFactor = 3.0
+	bulkheadProfiles = srf, size3
 
 	node_stack_top = 0.0, 0.22, 0.0, 0.0 , 1.0, 0.0, 1, 1
-    node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1
 	attachRules = 0,1,1,1,0
 
-    fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
-    sound_vent_large = decouple
+	sound_vent_large = decouple
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 
-    TechRequired = basicRocketry
-    entryCost = 1500
-    cost = 375
-    category = Coupling
-    subcategory = 0
+	TechRequired = basicRocketry
+	entryCost = 1500
+	cost = 375
+	category = Coupling
+	subcategory = 0
  
-    title = #ROS-titl-375 // Radial Separator Mini
-    manufacturer = #PNP-Agency-titl
-    description = #ROS-desc-375
+	title = #ROS-titl-375 // Radial Separator Mini
+	manufacturer = #PNP-Agency-titl
+	description = #ROS-desc-375
 	tags = #autoLOC_501792 // decouple
  
-    mass = 0.09
-    explosionPotential = 0
+	mass = 0.09
+	explosionPotential = 0
 	fuelCrossFeed = False
-    
-    dragModelType = default
-    maximum_drag = 0.2
-    minimum_drag = 0.2
-    angularDrag = 2
-    
-    crashTolerance = 8
+	
+	dragModelType = default
+	maximum_drag = 0.2
+	minimum_drag = 0.2
+	angularDrag = 2
+	
+	crashTolerance = 8
 	breakingForce = 150
 	breakingTorque = 150
+
 	maxTemp = 2000
 
-    stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
-    
+	stagingIcon = DECOUPLER_VERT
+	
 	MODULE
 	{
 		name = ModuleToggleCrossfeed
@@ -63,12 +64,21 @@ PART
 		techRequired = fuelSystems
 	}
 
-    MODULE
-    {
-        name = ModuleDecouple
-        ejectionForce = 150
-        isOmniDecoupler = true
-    }
+	MODULE
+	{
+		name = ModuleDecouple
+		ejectionForce = 150
+		ejectionForcePercent = 100
+		isOmniDecoupler = True
+		fxGroupName = decouple
+		staged = True
+		stagingEnabled = True
+		menuName = #autoLOC_6001443 // Decouple
+		stagingEnableText = #autoLOC_240328 // Decoupler: Enable Staging
+		stagingDisableText = #autoLOC_240329 // Decoupler: Disable Staging
+		stagingToggleEnabledEditor = True
+		stagingToggleEnabledFlight = True
+	}
 	
 	MODULE
 	{
@@ -81,8 +91,8 @@ PART
 	{
 		cube = Default, 4.476,0.7908,2.048, 4.476,0.7908,2.048, 11.12,0.948,0.4087, 11.12,0.938,1.692, 4.199,0.7265,3.403, 4.199,0.7263,3.241, 0,-0.2191,-2.18E-07, 3.912,1.884,3.912
 	}
-    
-    MODULE
+	
+	MODULE
 	{
 		name = ModuleTestSubject
 		useStaging = True
